Initial working layout
Working layout created for ExploreActivity

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -15,6 +15,11 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<resources>
 
-</menu>
+    <!-- Drawable attributes. -->
+    <attr name="drawableExplore" format="reference" />
+    <attr name="drawableFavorites" format="reference" />
+    <attr name="drawableEvents" format="reference" />
+
+</resources>
