--- a/app/src/main/res/layout/container_explore.xml
+++ b/app/src/main/res/layout/container_explore.xml
@@ -15,13 +15,13 @@
   ~ limitations under the License.
   -->
 
-<android.support.design.widget.NavigationView
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navView"
-    android:layout_height="match_parent"
-    android:layout_width="wrap_content"
-    android:layout_gravity="start"
-    android:fitsSystemWindows="true"
-    app:headerLayout="@layout/view_nav_header"
-    app:menu="@menu/menu_nav"/>
+    android:id="@+id/main_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <include layout="@layout/widget_appbar_tabbed" />
+
+</android.support.design.widget.CoordinatorLayout>
