--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -15,13 +15,25 @@
   ~ limitations under the License.
   -->
 
-<android.support.design.widget.NavigationView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/navView"
-    android:layout_height="match_parent"
-    android:layout_width="wrap_content"
-    android:layout_gravity="start"
-    android:fitsSystemWindows="true"
-    app:headerLayout="@layout/view_nav_header"
-    app:menu="@menu/menu_nav"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <group android:checkableBehavior="single">
+
+        <item
+            android:id="@+id/menuNavExplore"
+            android:icon="?attr/drawableExplore"
+            android:title="@string/menu_nav_explore" />
+
+        <item
+            android:id="@+id/menuNavFavorites"
+            android:icon="?attr/drawableFavorites"
+            android:title="@string/menu_nav_favorites" />
+
+        <item
+            android:id="@+id/menuNavEvents"
+            android:icon="?attr/drawableEvents"
+            android:title="@string/menu_nav_events" />
+
+    </group>
+
+</menu>
